feat: add field trip window settings
